# vulkan-rendering

./: CMakeLists.txt  main.cpp
source/core/: application.cpp  application.h  exceptions.h  window.cpp  window.h
source/util/: log.h
